Add map details

--- a/_includes/map.html
+++ b/_includes/map.html
@@ -17,6 +17,6 @@
 	}
 </script>
 <script async="async" defer="defer"
-	src="https://maps.googleapis.com/maps/api/js?callback=initMap">
+	src="https://maps.googleapis.com/maps/api/js?client=gme-wixcomltd2&callback=initMap&language=nl">
 	
 </script>
