--- a/_includes/map.html
+++ b/_includes/map.html
@@ -17,5 +17,5 @@
 	}
 </script>
 <script async="async" defer="defer"
-	src="https://maps.googleapis.com/maps/api/js?key=THISISTHEKEY&callback=initMap&language=nl">
+	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCeCFJLwIhlDIe5EV0Yyg1KIbM3Gs3rUpk&callback=initMap&language=nl">
 </script>
