--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -6,6 +6,7 @@ $color-primary: #e3653e;
 $color-menu: #f8b831;
 $color-menu-hover: #8d1701;
 $color-menu-selected: #8d1701;
+$color-submenu: #ffc958;
 
 $standard-font-stack: 'Open Sans', sans-serif;
 
