--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -24,9 +24,9 @@ nav {
         height: 3em;
     }
     
-    .top-bar, .top-bar ul {
+    .top-bar, .top-bar .top-bar-right > ul {
         background-color: inherit;
-        padding: 0;
+		padding: 0;
     }
     
 	.menu {
