--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -23,6 +23,8 @@
 	                </ul></li>
  				<li {% if page.menu == "praktisch" %} class="active" {% endif %}>
                     <a {% unless page.menu == "praktisch" %} href="praktisch.html" {% endunless %}>Praktisch</a></li>
+				<li {% if page.menu == "Getuigenissen" %} class="active" {% endif %}>
+                    <a {% unless page.menu == "Getuigenissen" %} href="Getuigenissen.html" {% endunless %}>Getuigenissen</a></li>
 				<li {% if page.menu == "contact" %} class="active" {% endif %}>
                     <a {% unless page.menu == "contact" %} href="contact.html" {% endunless %}>Contact</a></li>
 		</ul>
