--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -16,6 +16,10 @@
                 	<ul class="vertical menu">
 		 				<li {% if page.menu == "shiatsu" %} class="active" {% endif %}>
 		                    <a {% unless page.menu == "shiatsu" %} href="shiatsu.html" {% endunless %}>Shiatsu</a></li>
+		 				<li {% if page.menu == "voetreflexologie" %} class="active" {% endif %}>
+		                    <a {% unless page.menu == "voetreflexologie" %} href="voetreflexologie.html" {% endunless %}>Voetreflexologie</a></li>
+		 				<li {% if page.menu == "stresscoaching" %} class="active" {% endif %}>
+		                    <a {% unless page.menu == "stresscoaching" %} href="stresscoaching.html" {% endunless %}>Stress Coaching</a></li>
 						<li {% if page.menu == "reiki" %} class="active" {% endif %}>
 		                    <a {% unless page.menu == "reiki" %} href="reiki.html" {% endunless %}>Reiki</a></li>
 						<li {% if page.menu == "fengshui" %} class="active" {% endif %}>
