--- a/_sass/_foundation-settings.scss
+++ b/_sass/_foundation-settings.scss
@@ -12,5 +12,5 @@ $foundation-palette: (
 $button-radius: 4px;
 
 $topbar-submenu-background: $color-submenu;
-$blockquote-color: $black;
+$blockquote-color: black;
 
