--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -15,5 +15,6 @@
         </p>
         <a style="font-size: 3em; white" href="https://www.facebook.com/manopura"><i class="fa fa-facebook-official" aria-hidden="true"></i></a><br />
         <a class="button" href="files/manopura.pdf">Download flyer</a>
+        <a class="button" href="files/pagina1 plooifolder.jpg">Download folder</a>
     </div>
 </section>
