--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -15,7 +15,7 @@
         </p>
         <a style="font-size: 3em; white" href="https://www.facebook.com/manopura"><i class="fa fa-facebook-official" aria-hidden="true"></i></a><br />
         <a class="button" href="files/manopura.pdf">Download flyer</a>
-        <a class="button" href="files/pagina1 plooifolder.jpg">Download folder1</a>
-        <a class="button" href="files/pagina2 plooifolder.jpg">Download folder2</a>
+        <a class="button" href="files/pagina1_plooifolder.jpg">Download folder1</a>
+        <a class="button" href="files/pagina2_plooifolder.jpg">Download folder2</a>
     </div>
 </section>
