--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -11,8 +11,8 @@
 			<ul class="menu vertical medium-horizontal" data-responsive-menu="accordion medium-dropdown">
 				<li {% if page.menu == "welkom" %} class="active" {% endif %}>
                     <a {% unless page.menu == "welkom" %} href="index.html" {% endunless %}>Welkom</a></li>
-                <li {% if page.menu == "behandelingen" %} class="active" {% endif %}>
-                	<a><span>Behandelingen</span></a>
+                <li {% if page.menu == "aanbod" %} class="active" {% endif %}>
+                	<a><span>Aanbod</span></a>
                 	<ul class="vertical menu">
 		 				<li {% if page.menu == "shiatsu" %} class="active" {% endif %}>
 		                    <a {% unless page.menu == "shiatsu" %} href="shiatsu.html" {% endunless %}>Shiatsu</a></li>
