--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -22,8 +22,12 @@
 		                    <a {% unless page.menu == "stresscoaching" %} href="stresscoaching.html" {% endunless %}>Stress Coaching</a></li>
 						<li {% if page.menu == "reiki" %} class="active" {% endif %}>
 		                    <a {% unless page.menu == "reiki" %} href="reiki.html" {% endunless %}>Reiki</a></li>
+						<li {% if page.menu == "meditatie" %} class="active" {% endif %}>
+		                    <a {% unless page.menu == "meditatie" %} href="meditatie.html" {% endunless %}>meditatie</a></li>
 						<li {% if page.menu == "fengshui" %} class="active" {% endif %}>
 		                    <a {% unless page.menu == "fengshui" %} href="fengshui.html" {% endunless %}>Feng Shui</a></li>
+				
+				
 	                </ul></li>
  				<li {% if page.menu == "praktisch" %} class="active" {% endif %}>
                     <a {% unless page.menu == "praktisch" %} href="praktisch.html" {% endunless %}>Praktisch</a></li>
