--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -23,7 +23,7 @@
 						<li {% if page.menu == "reiki" %} class="active" {% endif %}>
 		                    <a {% unless page.menu == "reiki" %} href="reiki.html" {% endunless %}>Reiki</a></li>
 						<li {% if page.menu == "meditatie" %} class="active" {% endif %}>
-		                    <a {% unless page.menu == "meditatie" %} href="meditatie.html" {% endunless %}>meditatie</a></li>
+		                    <a {% unless page.menu == "meditatie" %} href="meditatie.html" {% endunless %}>Meditatie</a></li>
 						<li {% if page.menu == "fengshui" %} class="active" {% endif %}>
 		                    <a {% unless page.menu == "fengshui" %} href="fengshui.html" {% endunless %}>Feng Shui</a></li>
 				
