--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -26,6 +26,8 @@
 		                    <a {% unless page.menu == "meditatie" %} href="meditatie.html" {% endunless %}>Meditatie</a></li>
 						<li {% if page.menu == "fengshui" %} class="active" {% endif %}>
 		                    <a {% unless page.menu == "fengshui" %} href="fengshui.html" {% endunless %}>Feng Shui</a></li>
+						<li {% if page.menu == "GezondheidshuisLede" %} class="active" {% endif %}>
+		                    <a {% unless page.menu == "gezondheidshuislede" %} href="gezondheidshuislede.html" {% endunless %}>GezondheidshuisLede</a></li>
 				
 				
 	                </ul></li>
