--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -28,7 +28,8 @@
 		                    <a {% unless page.menu == "fengshui" %} href="fengshui.html" {% endunless %}>Feng Shui</a></li>
 						<li {% if page.menu == "GezondheidshuisLede" %} class="active" {% endif %}>
 		                    <a {% unless page.menu == "gezondheidshuislede" %} href="gezondheidshuislede.html" {% endunless %}>GezondheidshuisLede</a></li>
-				
+						<li {% if page.menu == "etherische_olie" %} class="active" {% endif %}>
+		                    <a {% unless page.menu == "etherische_olie" %} href="etherische_olie.html" {% endunless %}>Etherische olie</a></li>
 				
 	                </ul></li>
  				<li {% if page.menu == "praktisch" %} class="active" {% endif %}>
