--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -37,7 +37,7 @@
 				<li {% if page.menu == "Getuigenissen" %} class="active" {% endif %}>
                     <a {% unless page.menu == "Getuigenissen" %} href="Getuigenissen.html" {% endunless %}>Getuigenissen</a></li>
 				<li {% if page.menu == "Blog" %} class="active" {% endif %}>
-                    <a {% unless page.menu == "Blog" %} href="blog" {% endunless %}>Schrijfsels</a></li>
+                    <a {% unless page.menu == "Blog" %} href="blog/" {% endunless %}>Schrijfsels</a></li>
 				<li {% if page.menu == "contact" %} class="active" {% endif %}>
                     <a {% unless page.menu == "contact" %} href="contact.html" {% endunless %}>Contact</a></li>
 		</ul>
