Enabled blog and fixed some issues

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,41 +5,41 @@
     </div>
 	<div class="row top-bar" id="navigatie">
         <div class="top-bar-left show-for-medium">
-            <img src="images/logo.jpg" />
+            <img src="/images/logo.jpg" />
 		</div>
         <div class="top-bar-right" data-toggler="hide">
 			<ul class="menu vertical medium-horizontal" data-responsive-menu="accordion medium-dropdown">
 				<li {% if page.menu == "welkom" %} class="active" {% endif %}>
-                    <a {% unless page.menu == "welkom" %} href="index.html" {% endunless %}>Welkom</a></li>
+                    <a {% unless page.menu == "welkom" %} href="/index.html" {% endunless %}>Welkom</a></li>
                 <li {% if page.menu == "aanbod" %} class="active" {% endif %}>
                 	<a><span>Aanbod</span></a>
                 	<ul class="vertical menu">
 		 				<li {% if page.menu == "shiatsu" %} class="active" {% endif %}>
-		                    <a {% unless page.menu == "shiatsu" %} href="shiatsu.html" {% endunless %}>Shiatsu</a></li>
+		                    <a {% unless page.menu == "shiatsu" %} href="/shiatsu.html" {% endunless %}>Shiatsu</a></li>
 		 				<li {% if page.menu == "voetreflexologie" %} class="active" {% endif %}>
-		                    <a {% unless page.menu == "voetreflexologie" %} href="voetreflexologie.html" {% endunless %}>Voetreflexologie</a></li>
+		                    <a {% unless page.menu == "voetreflexologie" %} href="/voetreflexologie.html" {% endunless %}>Voetreflexologie</a></li>
 		 				<li {% if page.menu == "stresscoaching" %} class="active" {% endif %}>
-		                    <a {% unless page.menu == "stresscoaching" %} href="stresscoaching.html" {% endunless %}>Stress Coaching</a></li>
+		                    <a {% unless page.menu == "stresscoaching" %} href="/stresscoaching.html" {% endunless %}>Stress Coaching</a></li>
 						<li {% if page.menu == "reiki" %} class="active" {% endif %}>
-		                    <a {% unless page.menu == "reiki" %} href="reiki.html" {% endunless %}>Reiki</a></li>
+		                    <a {% unless page.menu == "reiki" %} href="/reiki.html" {% endunless %}>Reiki</a></li>
 						<li {% if page.menu == "meditatie" %} class="active" {% endif %}>
-		                    <a {% unless page.menu == "meditatie" %} href="meditatie.html" {% endunless %}>Meditatie</a></li>
+		                    <a {% unless page.menu == "meditatie" %} href="/meditatie.html" {% endunless %}>Meditatie</a></li>
 						<li {% if page.menu == "fengshui" %} class="active" {% endif %}>
-		                    <a {% unless page.menu == "fengshui" %} href="fengshui.html" {% endunless %}>Feng Shui</a></li>
+		                    <a {% unless page.menu == "fengshui" %} href="/fengshui.html" {% endunless %}>Feng Shui</a></li>
 						<li {% if page.menu == "GezondheidshuisLede" %} class="active" {% endif %}>
-		                    <a {% unless page.menu == "gezondheidshuislede" %} href="gezondheidshuislede.html" {% endunless %}>GezondheidshuisLede</a></li>
+		                    <a {% unless page.menu == "GezondheidshuisLede" %} href="/gezondheidshuislede.html" {% endunless %}>GezondheidshuisLede</a></li>
 						<li {% if page.menu == "etherische_olie" %} class="active" {% endif %}>
-		                    <a {% unless page.menu == "etherische_olie" %} href="etherische_olie.html" {% endunless %}>Etherische olie</a></li>
+		                    <a {% unless page.menu == "etherische_olie" %} href="/etherische_olie.html" {% endunless %}>Etherische olie</a></li>
 				
 	                </ul></li>
  				<li {% if page.menu == "praktisch" %} class="active" {% endif %}>
-                    <a {% unless page.menu == "praktisch" %} href="praktisch.html" {% endunless %}>Praktisch</a></li>
+                    <a {% unless page.menu == "praktisch" %} href="/praktisch.html" {% endunless %}>Praktisch</a></li>
 				<li {% if page.menu == "Getuigenissen" %} class="active" {% endif %}>
-                    <a {% unless page.menu == "Getuigenissen" %} href="Getuigenissen.html" {% endunless %}>Getuigenissen</a></li>
+                    <a {% unless page.menu == "Getuigenissen" %} href="/Getuigenissen.html" {% endunless %}>Getuigenissen</a></li>
 				<li {% if page.menu == "Blog" %} class="active" {% endif %}>
-                    <a {% unless page.menu == "Blog" %} href="blog/" {% endunless %}>Schrijfsels</a></li>
+                    <a href="/blog/">Schrijfsels</a></li>
 				<li {% if page.menu == "contact" %} class="active" {% endif %}>
-                    <a {% unless page.menu == "contact" %} href="contact.html" {% endunless %}>Contact</a></li>
+                    <a {% unless page.menu == "contact" %} href="/contact.html" {% endunless %}>Contact</a></li>
 		</ul>
 		</div>
 	</div>
