--- a/_includes/post_list.html
+++ b/_includes/post_list.html
@@ -7,6 +7,6 @@
 	{{ post.excerpt }}
 	
 	{% include post_tags.html tags=post.tags %}
-	<a href="{{ post.url }}"><i class="fab fa-readme" aria-hidden="true"></i> Read on...</a>
+	<a href="{{ post.url }}"><i class="fab fa-readme" aria-hidden="true"></i> Blijf lezen...</a>
 </div>
 {% endfor %}
