--- a/_includes/post_list.html
+++ b/_includes/post_list.html
@@ -3,7 +3,7 @@
 	<h1>
 		<a href="{{ post.url }}">{{ post.title }}</a>
 	</h1>
-	<div class="date">{{ post.date | date: "%b %-d, %Y" }}</div>
+	<div class="date">{% include dd.liq post=post %}</div>
 	{{ post.excerpt }}
 	
 	{% include post_tags.html tags=post.tags %}
