--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -36,7 +36,8 @@
                     <a {% unless page.menu == "praktisch" %} href="/praktisch.html" {% endunless %}>Praktisch</a></li>
 				<li {% if page.menu == "Getuigenissen" %} class="active" {% endif %}>
                     <a {% unless page.menu == "Getuigenissen" %} href="/Getuigenissen.html" {% endunless %}>Getuigenissen</a></li>
-<!--				<li {% if page.menu == "Blog" or layout.menu == "Blog" %} class="active" {% endif %}>
+<!--
+				<li {% if page.menu == "Blog" or layout.menu == "Blog" %} class="active" {% endif %}>
                     <a href="/blog/">Schrijfsels</a></li>
 -->
 				<li {% if page.menu == "contact" %} class="active" {% endif %}>
