--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -24,12 +24,14 @@
 		                    <a {% unless page.menu == "reiki" %} href="/reiki.html" {% endunless %}>Reiki</a></li>
 						<li {% if page.menu == "meditatie" %} class="active" {% endif %}>
 		                    <a {% unless page.menu == "meditatie" %} href="/meditatie.html" {% endunless %}>Meditatie</a></li>
-						<li {% if page.menu == "fengshui" %} class="active" {% endif %}>
-		                    <a {% unless page.menu == "fengshui" %} href="/fengshui.html" {% endunless %}>Feng Shui</a></li>
+						<li {% if page.menu == "lymfedrainage" %} class="active" {% endif %}>
+		                    <a {% unless page.menu == "lymfedrainage" %} href="/lymfedrainage.html" {% endunless %}>Manuele_lymfedrainage</a></li>
 						<li {% if page.menu == "GezondheidshuisLede" %} class="active" {% endif %}>
 		                    <a {% unless page.menu == "GezondheidshuisLede" %} href="/gezondheidshuislede.html" {% endunless %}>GezondheidshuisLede</a></li>
 						<li {% if page.menu == "etherische_olie" %} class="active" {% endif %}>
 		                    <a {% unless page.menu == "etherische_olie" %} href="/etherische_olie.html" {% endunless %}>Etherische olie</a></li>
+						<li {% if page.menu == "fengshui" %} class="active" {% endif %}>
+		                    <a {% unless page.menu == "fengshui" %} href="/fengshui.html" {% endunless %}>Feng Shui</a></li>
 				
 	                </ul></li>
  				<li {% if page.menu == "praktisch" %} class="active" {% endif %}>
