--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -25,7 +25,7 @@
 						<li {% if page.menu == "meditatie" %} class="active" {% endif %}>
 		                    <a {% unless page.menu == "meditatie" %} href="/meditatie.html" {% endunless %}>Meditatie</a></li>
 						<li {% if page.menu == "lymfedrainage" %} class="active" {% endif %}>
-		                    <a {% unless page.menu == "lymfedrainage" %} href="/lymfedrainage.html" {% endunless %}>Manuele lymfedrainage</a></li>
+		                    <a {% unless page.menu == "lymfedrainage" %} href="/lymfedrainage.html" {% endunless %}>Manuele lymfdrainage</a></li>
 						<li {% if page.menu == "GezondheidshuisLede" %} class="active" {% endif %}>
 		                    <a {% unless page.menu == "GezondheidshuisLede" %} href="/gezondheidshuislede.html" {% endunless %}>GezondheidshuisLede</a></li>
 						<li {% if page.menu == "etherische_olie" %} class="active" {% endif %}>
