--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -28,8 +28,8 @@
 		                    <a {% unless page.menu == "lymfedrainage" %} href="/lymfedrainage.html" {% endunless %}>Manuele lymfdrainage</a></li>
 						<li {% if page.menu == "GezondheidshuisLede" %} class="active" {% endif %}>
 		                    <a {% unless page.menu == "GezondheidshuisLede" %} href="/gezondheidshuislede.html" {% endunless %}>GezondheidshuisLede</a></li>
-						<li {% if page.menu == "etherische_olie" %} class="active" {% endif %}>
-		                    <a {% unless page.menu == "etherische_olie" %} href="/etherische_olie.html" {% endunless %}>Etherische olie</a></li>
+						<li {% if page.menu == "tWinkelhoekje" %} class="active" {% endif %}>
+		                    <a {% unless page.menu == "tWinkelhoekje" %} href="/tWinkelhoekje.html" {% endunless %}>Etherische olie</a></li>
 						<li {% if page.menu == "fengshui" %} class="active" {% endif %}>
 		                    <a {% unless page.menu == "fengshui" %} href="/fengshui.html" {% endunless %}>Feng Shui</a></li>
 				
