--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,4 +5,11 @@
 		</div>
 		<div class="copyright text-center">2017, Manopura.</div>
 	</div>
+	<script type="text/javascript">
+    (function(e,t,o,n,p,r,i){e.visitorGlobalObjectAlias=n;e[e.visitorGlobalObjectAlias]=e[e.visitorGlobalObjectAlias]||function(){(e[e.visitorGlobalObjectAlias].q=e[e.visitorGlobalObjectAlias].q||[]).push(arguments)};e[e.visitorGlobalObjectAlias].l=(new Date).getTime();r=t.createElement("script");r.src=o;r.async=true;i=t.getElementsByTagName("script")[0];i.parentNode.insertBefore(r,i)})(window,document,"https://diffuser-cdn.app-us1.com/diffuser/diffuser.js","vgo");
+    vgo('setAccount', '649980955');
+    vgo('setTrackByDefault', true);
+
+    vgo('process');
+</script>
 </footer>
