--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -13,6 +13,7 @@
             Er is voldoende parkeerplaats aanwezig in de straat.<br />
             Let wel op: het is blauwe zone. Dus vergeet je blauwe kaart niet te leggen.
         </p>
+        <div class="_form_1"></div><script src="https://manopura.activehosted.com/f/embed.php?id=1" type="text/javascript" charset="utf-8"></script>
         <a style="font-size: 3em; white" href="https://www.facebook.com/manopura"><i class="fa fa-facebook-official" aria-hidden="true"></i></a><br />
         <a class="button" href="files/manopura.pdf">Download flyer</a>
         <a class="button" href="images/pagaplooifolder.jpg">Download folder1</a>
