--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,4 +1,30 @@
 <section>
+    <!-- Load Facebook SDK for JavaScript -->
+      <div id="fb-root"></div>
+      <script>
+        window.fbAsyncInit = function() {
+          FB.init({
+            xfbml            : true,
+            version          : 'v6.0'
+          });
+        };
+
+        (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/nl_NL/sdk/xfbml.customerchat.js';
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));</script>
+
+      <!-- Your customer chat code -->
+      <div class="fb-customerchat"
+        attribution=setup_tool
+        page_id="486835188181046"
+  theme_color="#ff7e29"
+  logged_in_greeting="Hallo! Hoe kan ik je helpen?"
+  logged_out_greeting="Hallo! Hoe kan ik je helpen?">
+      </div>
     <div class="row column text-center">
         <p>
             Manopura<br/>
