--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -29,7 +29,7 @@
 						<li {% if page.menu == "lymfedrainage" %} class="active" {% endif %}>
 		                    <a {% unless page.menu == "lymfedrainage" %} href="/lymfedrainage.html" {% endunless %}>Manuele lymfdrainage</a></li>
 						<li {% if page.menu == "tWinkelhoekje" %} class="active" {% endif %}>
-		                    <a {% unless page.menu == "tWinkelhoekje" %} href="/tWinkelhoekje.html" {% endunless %}>Etherische olie</a></li>
+		                    <a {% unless page.menu == "tWinkelhoekje" %} href="/tWinkelhoekje.html" {% endunless %}>tWinkelhoekje</a></li>
 						<li {% if page.menu == "fengshui" %} class="active" {% endif %}>
 		                    <a {% unless page.menu == "fengshui" %} href="/fengshui.html" {% endunless %}>Feng Shui</a></li>
 				
