--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
 	<div class="row column">
 		<div class="text-center">
-			<a href="https://www.facebook.com/manopura"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+			<a href="https://mewe.com/p/manopura-komtotrust-mariandelathauwer"><i class="fa fa-mewe-official" aria-hidden="true"></i></a>
 		</div>
 		<div class="copyright text-center">2017, Manopura.</div>
 	</div>
