--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -26,8 +26,10 @@
 		                    <a {% unless page.menu == "reiki" %} href="/reiki.html" {% endunless %}>Reiki</a></li>
 						<li {% if page.menu == "meditatie" %} class="active" {% endif %}>
 		                    <a {% unless page.menu == "meditatie" %} href="/meditatie.html" {% endunless %}>Meditatie</a></li>
-						<li {% if page.menu == "tWinkelhoekje" %} class="active" {% endif %}>
-		                    
+						<li {% if page.menu == "RodeHeuvel" %} class="active" {% endif %}>
+		                    <a {% unless page.menu == "RodeHeuvel" %} href="/Rodeheuvel.html" {% endunless %}>RodeHeuvel</a></li>
+						
+					
 					
 				
 	                </ul></li>
