--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -27,7 +27,7 @@
 						<li {% if page.menu == "meditatie" %} class="active" {% endif %}>
 		                    <a {% unless page.menu == "meditatie" %} href="/meditatie.html" {% endunless %}>Meditatie</a></li>
 						<li {% if page.menu == "RodeHeuvel" %} class="active" {% endif %}>
-		                    <a {% unless page.menu == "RodeHeuvel" %} href="/Rodeheuvel.md" {% endunless %}>RodeHeuvel</a></li>
+		                    <a {% unless page.menu == "RodeHeuvel" %} href="/Rodeheuvel.html" {% endunless %}>RodeHeuvel</a></li>
 						
 					
 					
