--- a/_includes/before.html
+++ b/_includes/before.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<meta name="keywords" content="energie, energetisch, meridianen, energiebanen, shiatsu, reiki, meditatie, gezondheid, welzijn, holistisch, HSP, stress, klachten, pijn, voetreflex, behandeling, inzicht, relax, ontspanning, immuniteit, rust, coaching, stresscoach, burn-out" />
+	<meta name="keywords" content="energie, energetisch, meridianen, energiebanen, shiatsu, reiki, meditatie, gezondheid, welzijn, holistisch, HSP, stress, klachten, pijn, voetreflex, behandeling, inzicht, relax, ontspanning, immuniteit, rust, coaching, stresscoach, burn-out, yoga, mindfulness" />
 
 	<title>Manopura</title>
 
