--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -14,12 +14,12 @@
                 <li {% if page.menu == "aanbod" %} class="active" {% endif %}>
                 	<a><span>Aanbod</span></a>
                 	<ul class="vertical menu">
-		 				<li {% if page.menu == "shiatsu" %} class="active" {% endif %}>
-		                    <a {% unless page.menu == "shiatsu" %} href="/shiatsu.html" {% endunless %}>Shiatsu</a></li>
+		 				<li {% if page.menu == "overzicht" %} class="active" {% endif %}>
+		                    <a {% unless page.menu == "overzicht" %} href="/overzicht.html" {% endunless %}>Overzicht</a></li>
 						<li {% if page.menu == "cursussen" %} class="active" {% endif %}>
 		                    <a {% unless page.menu == "cursussen" %} href="/cursussen.html" {% endunless %}>Cursussen</a></li>
 		 				<li {% if page.menu == "voetreflexologie" %} class="active" {% endif %}>
-		                    <a {% unless page.menu == "voetreflexologie" %} href="/voetreflexologie.html" {% endunless %}>Voetreflexologie</a></li>
+		                    <a {% unless page.menu == "voetreflexologie" %} href="/voetreflexologie.html" {% endunless %}>Shiatsu en Voetreflexologie</a></li>
 		 				<li {% if page.menu == "stresscoaching" %} class="active" {% endif %}>
 		                    <a {% unless page.menu == "stresscoaching" %} href="/stresscoaching.html" {% endunless %}>Stress Coaching</a></li>
 						<li {% if page.menu == "reiki" %} class="active" {% endif %}>
