--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -26,6 +26,8 @@
 		                    <a {% unless page.menu == "reiki" %} href="/reiki.html" {% endunless %}>Reiki</a></li>
 						<li {% if page.menu == "meditatie" %} class="active" {% endif %}>
 		                    <a {% unless page.menu == "meditatie" %} href="/meditatie.html" {% endunless %}>Meditatie</a></li>
+						<li {% if page.menu == "psychodynamica" %} class="active" {% endif %}>
+		                    <a {% unless page.menu == "psychodynamica" %} href="/psychodynamica.html" {% endunless %}>Psychodynamica</a></li>
 						<li {% if page.menu == "rodeheuvel" %} class="active" {% endif %}>
 		                    <a {% unless page.menu == "rodeheuvel" %} href="/rodeheuvel.html" {% endunless %}>RodeHeuvel</a></li>
 						
