--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -27,7 +27,7 @@
 						<li {% if page.menu == "meditatie" %} class="active" {% endif %}>
 		                    <a {% unless page.menu == "meditatie" %} href="/meditatie.html" {% endunless %}>Meditatie</a></li>
 						<li {% if page.menu == "psychodynamica" %} class="active" {% endif %}>
-		                    <a {% unless page.menu == "psychodynamica" %} href="/psychodynamica.html" {% endunless %}>Psychodynamica</a></li>
+		                    <a {% unless page.menu == "psychodynamica" %} href="/psychodynamica.html" {% endunless %}>PsychoDynamica</a></li>
 						<li {% if page.menu == "rodeheuvel" %} class="active" {% endif %}>
 		                    <a {% unless page.menu == "rodeheuvel" %} href="/rodeheuvel.html" {% endunless %}>RodeHeuvel</a></li>
 						
