--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -14,10 +14,6 @@
             Er is voldoende parkeerplaats aanwezig in de straat.<br />
             Let wel op: het is blauwe zone. Dus vergeet je blauwe kaart niet te leggen.
         </p>
-        <div class="_form_1"></div><script src="https://manopura.activehosted.com/f/embed.php?id=1" type="text/javascript" charset="utf-8"></script>
-        <a style="font-size: 3em; white" href="https://mewe.com/p/manopura-komtotrust-mariandelathauwer"><i class="fa fa-mewe-official" aria-hidden="true"></i></a><br />
-        <a class="button" href="files/manopura.pdf">Download flyer</a>
-        <a class="button" href="images/pagaplooifolder.jpg">Download folder1</a>
-        <a class="button" href="images/pagbplooifolder.jpg">Download folder2</a>
+       <script async src="https://embed.email-provider.eu/e/6yfy0rzg6a-zadfbmkbhm.js"></script>
     </div>
 </section>
